--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,13 @@ jobs:
       - uses: actions/checkout@v1
       - name: Hello Codelines!
         run: echo "Hello from ${{github.workflow}} triggered by the ${{github.event_name}} done by ${{github.actor}}"
+      - name: :) More and more
+        env:  
+          JOB_CONTEXT: ${{toJson(job)}}
+        run: |
+          echo "job context : $JOB_CONTEXT "
+          echo "Done" 
+          
       
 
 
