--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,5 @@ jobs:
     
     steps:
       - uses: actions/checkout@v1
-      - name: Hello Codelines!
+      - name: Hello World!
         run: echo "Hello from ${{github.workflow}} triggered by the ${{github.event_name}} done by ${{github.actor}}"
-      
-
-
-
-       
